--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,6 @@
 
     .div-input-msg { grid-area: 1 / 1 / 2 / 4; }
     .div-msg-list { grid-area: 2 / 1 / 3 / 4; }
-    .div3 { grid-area: 3 / 1 / 4 / 2; }
-    .div4 { grid-area: 3 / 2 / 4 / 4; }
+    .div-msg-info { grid-area: 3 / 1 / 4 / 2; }
+    .div-msg-btn { grid-area: 3 / 2 / 4 / 4; }
       /* grid END*/
